--- a/cfn-templates/cfn-ovpn-cli-ec2-pub.yaml
+++ b/cfn-templates/cfn-ovpn-cli-ec2-pub.yaml
@@ -152,7 +152,7 @@ Resources:
         rolebased:
           type: "S3"
           buckets:
-            - !Ref ProjectName
+            - !Sub "proj-${ProjectName}"
           roleName: !Sub "${ProjectName}-pub-iam-ec2-${AWS::Region}"
       # .............................
       AWS::CloudFormation::Init:
@@ -231,7 +231,7 @@ Resources:
               fail2ban: []
           sources:
             /tmp:
-              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/ssh/cfn-ovpn-cli-ec2-harden-ssh.sh.tar.gz"
+              !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/ssh/cfn-ovpn-cli-ec2-harden-ssh.sh.tar.gz"
           files:
             "/etc/fail2ban/jail.local":
               content: |
@@ -289,7 +289,7 @@ Resources:
               group: root
           sources:
             /tmp:
-              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/iptables/cfn-ovpn-cli-ec2-pub-iptables.sh.tar.gz"
+              !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/iptables/cfn-ovpn-cli-ec2-pub-iptables.sh.tar.gz"
           commands:
             1_kernelParams:
               command: "sysctl -p /etc/sysctl.d/30-dh.iptables.conf"
@@ -310,7 +310,7 @@ Resources:
               cloudwatch-agent: "https://s3.amazonaws.com/amazoncloudwatch-agent/amazon_linux/amd64/latest/amazon-cloudwatch-agent.rpm"
           sources:
             /opt/aws/amazon-cloudwatch-agent/etc:
-              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/logs/${ProjectName}-amzn-cw-agent.json.tar.gz"
+              !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/logs/${ProjectName}-amzn-cw-agent.json.tar.gz"
           files:
             # .............................
             "/etc/rsyslog.d/30-iptables.conf":
@@ -399,7 +399,7 @@ Resources:
               group: "root"
           sources:
             /usr/local:
-              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/easy-rsa/cfn-ovpn-cli-vars/cfn-ovpn-cli-easyrsa-vars.tar.gz"
+              !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/easy-rsa/cfn-ovpn-cli-vars/cfn-ovpn-cli-easyrsa-vars.tar.gz"
           commands:
             1a_initPKI:
               command: "mkdir -p /usr/local/easy-rsa && cp -r /usr/share/easy-rsa/3/* $_"
@@ -445,11 +445,11 @@ Resources:
             8a_mvKeys:
               cwd: "/usr/local/easy-rsa/pki/private"
               command:
-                !Sub "tar -zcf - *client.key | aws s3 cp - s3://${ProjectName}/openvpn/client/key/cfn-ovpn-cli-client-key.tar.gz"
+                !Sub "tar -zcf - *client.key | aws s3 cp - s3://proj-${ProjectName}/openvpn/client/key/cfn-ovpn-cli-client-key.tar.gz"
             9a_mvReqs:
               cwd: "/usr/local/easy-rsa/pki/reqs"
               command:
-                !Sub "tar -zcf - *.req | aws s3 cp - s3://${ProjectName}/easy-rsa/sign-reqs/cfn-ovpn-cli-easyrsa-sign-reqs.tar.gz"
+                !Sub "tar -zcf - *.req | aws s3 cp - s3://proj-${ProjectName}/easy-rsa/sign-reqs/cfn-ovpn-cli-easyrsa-sign-reqs.tar.gz"
         # / / / / / / / / / / / / / / /
         configOpenvpn:
           packages:
@@ -457,7 +457,7 @@ Resources:
               openvpn: []
           sources:
             /etc/openvpn/server:
-              !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/openvpn/server/conf/cfn-ovpn-cli-server-1194.conf.tar.gz"
+              !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/openvpn/server/conf/cfn-ovpn-cli-server-1194.conf.tar.gz"
           files:
             "/usr/local/bin/vpn-server-status":
               content: |
@@ -476,7 +476,7 @@ Resources:
             1b_gen-HMAC:
               cwd: "/etc/openvpn/server"
               command:
-                !Sub "tar -czf - hmac-sig.key | aws s3 cp - s3://${ProjectName}/openvpn/client/cfn-ovpn-cli-client-hmac.tar.gz"
+                !Sub "tar -czf - hmac-sig.key | aws s3 cp - s3://proj-${ProjectName}/openvpn/client/cfn-ovpn-cli-client-hmac.tar.gz"
             2a_cpSvrDH:
               cwd: "/usr/local/easy-rsa/pki"
               command: "cp dh.pem /etc/openvpn/server/"
