--- a/cfn-templates/cfn-ovpn-cli.yaml
+++ b/cfn-templates/cfn-ovpn-cli.yaml
@@ -131,7 +131,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-vpc.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-vpc.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -147,7 +147,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-vpc-nacl.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-vpc-nacl.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -171,7 +171,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-vpc-sg.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-vpc-sg.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -190,7 +190,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-pub.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-pub.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -212,7 +212,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-priv.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-priv.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -233,7 +233,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-lt.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-lt.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -252,7 +252,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-tg.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-tg.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -269,7 +269,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-sns.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-sns.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -286,7 +286,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-asg.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-asg.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -312,7 +312,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-nlb.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-ec2-nlb.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -336,7 +336,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-cw.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-cw.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
@@ -353,7 +353,7 @@ Resources:
     # .............................
     Properties:
       TemplateURL:
-        !Sub "https://${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-r53.yaml"
+        !Sub "https://proj-${ProjectName}.s3.${AWS::Region}.amazonaws.com/cfn-templates/cfn-ovpn-cli-r53.yaml"
       Parameters:
         ProjectName:
           !Ref ProjectName
