--- a/cfn-templates/cfn-ovpn-cli-r53.yaml
+++ b/cfn-templates/cfn-ovpn-cli-r53.yaml
@@ -34,7 +34,7 @@ Parameters:
   OpenvpnDomainName:
     Description: "OpenVPN Domain Name"
     Type: String
-    Default: "cloudemprise.net"
+    Default: "cloudemprise.com"
     AllowedPattern:
       ^(([a-zA-Z]{1})|([a-zA-Z]{1}[a-zA-Z]{1})|([a-zA-Z]{1}[0-9]{1})|([0-9]{1}[a-zA-Z]{1})|([a-zA-Z0-9][a-zA-Z0-9-_]{1,61}[a-zA-Z0-9]))\.([a-zA-Z]{2,6}|[a-zA-Z0-9-]{2,30}\.[a-zA-Z]{2,3})$
   # .............................
